# canvas

./: .gitignore  .gitmodules  CanvasNative.podspec  Cargo.toml  Makefile  NativeScript.podspec  Package.swift  README.md  migrations.json  nx.json  package.json  references.d.ts  tsconfig.base.json  workspace.json
crates/canvas-2d/: Cargo.toml
crates/canvas-2d/src/: android.rs  image_bitmap.rs  ios.rs  lib.rs  prelude.rs
crates/canvas-2d/src/context/: drawing_rectangles.rs  filter_quality.rs  filters.rs  gradients_and_patterns.rs  image_smoothing.rs  matrix.rs  mod.rs  non_standard.rs  shadows.rs  state.rs  surface.rs  surface_gl.rs  surface_metal.rs  surface_vulkan.rs  text_decoder.rs  text_encoder.rs  transformations.rs
crates/canvas-2d/src/context/compositing/: composite_operation_type.rs  mod.rs
crates/canvas-2d/src/context/drawing_images/: mod.rs
crates/canvas-2d/src/context/drawing_paths/: fill_rule.rs  mod.rs
crates/canvas-2d/src/context/drawing_text/: global_fonts.rs  mod.rs  text_metrics.rs  typography.rs  typography_old.rs
crates/canvas-2d/src/context/fill_and_stroke_styles/: gradient.rs  mod.rs  paint.rs  pattern.rs
crates/canvas-2d/src/context/line_styles/: line_cap.rs  line_join.rs  mod.rs
crates/canvas-2d/src/context/paths/: mod.rs  path.rs
crates/canvas-2d/src/context/pixel_manipulation/: image_data.rs  mod.rs
crates/canvas-2d/src/context/text_styles/: mod.rs  text_align.rs  text_baseline.rs  text_direction.rs
crates/canvas-2d/src/ffi/: f32_array.rs  i32_array.rs  u32_array.rs
crates/canvas-2d/src/utils/: color.rs  dimensions.rs  geometry.rs  gl.rs  image.rs  mod.rs
crates/canvas-android/: Cargo.toml  build.rs
crates/canvas-android/src/: lib.rs
crates/canvas-android/src/jni_compat/: mod.rs  org_nativescript_canvas_NSCCanvas.rs  org_nativescript_canvas_NSCCanvasRenderingContext2D.rs  org_nativescript_canvas_NSCImageAsset.rs  org_nativescript_canvas_NSCImageBitmap.rs  org_nativescript_canvas_NSCWebGLRenderingContext.rs
crates/canvas-android/src/utils/: mod.rs
crates/canvas-android/src/utils/gl/: mod.rs  st.rs  surface_texture.rs  texture_render.rs  (+2 more)
crates/canvas-c/: Cargo.toml  cbindgen.toml
crates/canvas-c/src/: buffers.rs  helper.rs  image_asset.rs  impl_test.rs  lib.rs  text_decoder.rs  text_encoder.rs
crates/canvas-c/src/c2d/: context.rs  custom.rs  enums.rs  image_bitmap.rs  image_data.rs  matrix.rs  mod.rs  path.rs  string.rs  text_metrics.rs
crates/canvas-c/src/canvas2d/: context.rs  custom.rs  enums.rs  image_asset.rs  image_data.rs  matrix.rs  mod.rs  string.rs  text_base_line.rs  text_metrics.rs
crates/canvas-c/src/raf/: android.rs  ios.rs  mod.rs  visionos.rs
crates/canvas-c/src/webgl/: gl.rs  gl2.rs  mod.rs  result.rs
crates/canvas-c/src/webgpu/: enums.rs  error.rs  gpu.rs  gpu_adapter.rs  gpu_adapter_info.rs  gpu_bind_group.rs  gpu_bind_group_layout.rs  gpu_buffer.rs  gpu_canvas_context.rs  gpu_command_buffer.rs  gpu_command_encoder.rs  gpu_compute_pass.rs  gpu_compute_pass_encoder.rs  gpu_compute_pipeline.rs  gpu_device.rs  gpu_pipeline_layout.rs  gpu_query_set.rs  gpu_queue.rs  gpu_render_bundle.rs  gpu_render_bundle_encoder.rs  gpu_render_pass.rs  gpu_render_pass_encoder.rs  gpu_render_pipeline.rs  gpu_sampler.rs  gpu_shader_module.rs  gpu_supported_limits.rs  gpu_texture.rs  gpu_texture_view.rs  mod.rs  prelude.rs  structs.rs
crates/canvas-core/: Cargo.toml
crates/canvas-core/src/: context_attributes.rs  cpu.rs  image_asset.rs  io_surface.rs  lib.rs
crates/canvas-core/src/gl/: android.rs  ios.rs  mac.rs  mod.rs
crates/canvas-core/src/gpu/: metal.rs  mod.rs  vulkan.rs
crates/canvas-ios/: Cargo.toml  cbindgen.toml
crates/canvas-ios/src/: gl.rs  lib.rs  mtl.rs
crates/canvas-svg/: Cargo.toml  build.rs
crates/canvas-svg-android/: Cargo.toml
crates/canvas-svg-android/src/: lib.rs
crates/canvas-svg/src/: android.rs  ios.rs  lib.rs
crates/playground/: Cargo.toml
crates/playground/src/: fs.txt  fullscreenTexturedQuad.wgsl  main.rs  webgpu_three_cube.rs
napi/canvas-napi/: Cargo.toml  NSCTouchHandler.ts  app.ts  canvas.js  canvas.ts  deno.ts  index.d.ts  index.js  index.ts  js-binding.js  js-bindings.d.ts  js-bindings.js  main.mjs  package.json  polyfill.ts  tsconfig.cjs.json  tsconfig.json
napi/canvas-napi/config/: rollup.config.js
napi/canvas-napi/examples/: main.mjs  package.json  tsconfig.json
napi/canvas-napi/examples/meshes/: mesh.ts  teapot.ts  utils.ts
napi/canvas-napi/examples/node/: TweenMax.min.js  cubeMap.ts  main.mts  models.ts  package.json  renderBundles.ts  texturedCube.ts  three.ts  touchParticles.ts  tsconfig.json  utils.ts
napi/canvas-napi/examples/shaders/: cube.wgsl  fullscreenTexturedQuad.wgsl  particle.wgsl  probabilityMap.wgsl  vertexPositionColor.frag.wgsl
napi/canvas-napi/npm/darwin-arm64/: README.md  package.json
napi/canvas-napi/npm/darwin-universal/: package.json
napi/canvas-napi/npm/darwin-x64/: README.md  package.json
napi/canvas-napi/src/: c2d.rs  dom_matrix.rs  gl.rs  gl2.rs  image_asset.rs  lib.rs  text_decoder.rs
napi/canvas-napi/src/c2d/: image_data.rs  mod.rs  path.rs  pattern.rs  text_metrics.rs
napi/canvas-napi/src/gl/: base.rs  context_attributes.rs  extensions.rs  imports.rs  mod.rs  webgl_active_info.rs  webgl_framebuffer.rs  webgl_program.rs  webgl_renderbuffer.rs  webgl_shader_precision_format.rs
napi/canvas-napi/src/gl2/: mod.rs  webgl_sampler.rs  webgl_transform_feedback.rs  webgl_vertex_array_object.rs
napi/canvas-napi/src/gpu/: adapter.rs  adapter_info.rs  bind_group.rs  bind_group_layout.rs  buffer.rs  command_buffer.rs  command_encoder.rs  compute_pass_encoder.rs  compute_pipeline.rs  context.rs  device.rs  enums.rs  mod.rs  objects.rs  pipeline_layout.rs  query_set.rs  queue.rs  render_bundle.rs  render_bundle_encoder.rs  render_pass_encoder.rs  sampler.rs  shader_module.rs  texture.rs  texture_view.rs
napi/canvas-napi/utils/: index.js  index.ts  macrotask-scheduler.js  macrotask-scheduler.ts  mainthread-helper.js  mainthread-helper.ts
napi/canvas-napi/utils/raf/: fps-meter.js  fps-meter.ts  index.js  index.ts
(+431 files in other folders)
