[workspace]
resolver = "2"

members = [
    "crates/gl-bindings",
    "crates/canvas-core",
    "crates/canvas-2d",
    "crates/canvas-webgl",
    "crates/canvas-android",
    "crates/canvas-ios",
    "crates/playground",
    "crates/canvas-c",
    "crates/canvas-svg",
    "crates/canvas-napi",
    "crates/canvas-svg-ios",
    "crates/canvas-svg-android",
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
debug = false
incremental = false
strip = true


[workspace.dependencies.wgt]
package = "wgpu-types"
git = "https://github.com/triniwiz/wgpu"
rev = "9616414f16e5688192f6127f8104d8a07a3b1de6"




[workspace.dependencies]
env_logger = "0.11.5"
log = "0.4.22"
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
raw-window-handle = "0.6.2"
canvas-2d = { path = "./crates/canvas-2d" }
canvas-core = { path = "./crates/canvas-core" }
canvas-webgl = { path = "./crates/canvas-webgl" }
canvas-svg = { path = "./crates/canvas-svg" }
gl-bindings = { path = "./crates/gl-bindings" }
canvas-c = { path = "./crates/canvas-c" }
skia-safe = { version = "0.93.1", features = ["textlayout"] }
itertools = "0.14.0"
wgpu-core = { git = "https://github.com/triniwiz/wgpu", rev = "9616414f16e5688192f6127f8104d8a07a3b1de6", features = ["wgsl", "vulkan", "metal"] }
wgpu-hal = { git = "https://github.com/triniwiz/wgpu", rev = "9616414f16e5688192f6127f8104d8a07a3b1de6", features = ["metal", "vulkan"] }
ureq = "2.10.1"
jni = "0.21.1"
