[workspace]
resolver = "2"

members = [
    "crates/gl-bindings",
    "crates/canvas-core",
    "crates/canvas-2d",
    "crates/canvas-webgl",
    "crates/canvas-android",
    "crates/canvas-ios",
    "crates/playground",
    "crates/canvas-c",
    "crates/canvas-svg",
    "crates/canvas-napi",
    "crates/canvas-svg-ios",
    "crates/canvas-svg-android",
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"    # size-optimized default; hot rendering crates overridden below
debug = false
incremental = false
strip = true

# Keep rendering-critical crates at full speed
[profile.release.package.canvas-2d]
opt-level = 3

[profile.release.package.canvas-core]
opt-level = 3

[profile.release.package.canvas-webgl]
opt-level = 3

[profile.release.package.skia-safe]
opt-level = 3

[profile.release.package.skia-bindings]
opt-level = 3

# Aggressively size-optimize heavy utility crates
[profile.release.package.regex]
opt-level = "z"

[profile.release.package.regex-lite]
opt-level = "z"

[profile.release.package.ureq]
opt-level = "z"

[profile.release.package.image]
opt-level = "z"


[workspace.dependencies.wgt]
package = "wgpu-types"
git = "https://github.com/triniwiz/wgpu"
rev = "7e0f39f"




[workspace.dependencies]
env_logger = "0.11.5"
log = "0.4.29"
parking_lot = { version = "0.12.3" }
raw-window-handle = "0.6.2"
canvas-2d = { path = "./crates/canvas-2d" }
canvas-core = { path = "./crates/canvas-core" }
canvas-webgl = { path = "./crates/canvas-webgl" }
canvas-svg = { path = "./crates/canvas-svg" }
gl-bindings = { path = "./crates/gl-bindings" }
canvas-c = { path = "./crates/canvas-c" }
skia-safe = { version = "0.93.1", features = ["textlayout"] }
itertools = "0.14.0"
ustr = "1.1.0"
wgpu-core = { git = "https://github.com/triniwiz/wgpu", rev = "7e0f39f", features = ["wgsl"] }
wgpu-hal = { git = "https://github.com/triniwiz/wgpu", rev = "7e0f39f" }
ureq = "2.10.1"
jni = "0.21.1"
regex-lite = "0.1.9"
objc2 = { version = "0.6.3", default-features = false }
objc2-core-foundation = { version = "0.3.2", default-features = false }
objc2-metal = { version = "0.3.2", default-features = false, features = ["MTLCommandBuffer", "MTLCommandQueue", "MTLDrawable", "MTLPixelFormat", "MTLTexture", "MTLDevice", "objc2-core-foundation"] }
objc2-foundation = { version = "0.3.2", features = ["NSGeometry", "NSData", "NSAutoreleasePool", "NSDictionary", "NSObject", "NSValue", "NSString"] }
objc2-quartz-core = { version = "0.3.2", default-features = false, features = ["std",
    "objc2-core-foundation",
    "CALayer",
    "CAMetalLayer",
    "objc2-metal"] }
core-foundation = "0.10.1"