[package]
name = "canvas-2d"
version = "0.1.0"
edition = "2021"

[features]
metal = ["skia-safe/metal", "canvas-core/metal"]
gl = ["skia-safe/gl"]
vulkan = ["skia-safe/vulkan", "canvas-core/vulkan"]
default = ["gl"]

[dependencies]
canvas-core = { workspace = true, features = ["2d"] }
parking_lot.workspace = true
regex = "1.10.6"
base64 = "0.22.1"
encoding_rs = "0.8.34"
gl-bindings = { workspace = true }
csscolorparser = { git = "https://github.com/triniwiz/csscolorparser-rs.git", rev = "c8c7e86", features = ["named-colors"] }
log.workspace = true
skia-safe = { workspace = true, features = ["textlayout"] }
bytes = "1.6.1"
env_logger = "0.11.2"
ash = { version = "0.38.0", optional = true, features = ["libloading"] }
raw-window-handle.workspace = true
bitflags = "2.6.0"

[target.'cfg(any(target_os = "ios", target_os="macos"))'.dependencies]
foreign-types-shared = "0.3.1"