[package]
name = "canvas-2d"
version = "2.0.0"
edition = "2021"

[features]
metal = ["skia-safe/metal", "canvas-core/metal"]
gl = ["skia-safe/gl"]
vulkan = ["skia-safe/vulkan", "canvas-core/vulkan"]
default = ["gl"]

[dependencies]
canvas-core = { workspace = true, features = ["2d"] }
parking_lot.workspace = true
regex-lite = "0.1.6"
base64 = "0.22.1"
encoding_rs = "0.8.35"
gl-bindings = { workspace = true }
csscolorparser = { version = "0.7.1", features = ["named-colors", "rust-rgb"] }
log.workspace = true
skia-safe = { workspace = true, features = ["textlayout"] }
bytes = "1.7.2"
env_logger = "0.11.2"
ash = { version = "0.38.0", optional = true, features = ["libloading"] }
raw-window-handle.workspace = true
bitflags = "2.6.0"

[target.'cfg(any(target_os = "ios", target_os="macos"))'.dependencies]
foreign-types-shared = "0.3.1"
objc2-foundation = { version = "0.2.2", features = ["NSAutoreleasePool"] }