[package]
name = "canvas-android"
version = "0.1.0"
edition = "2021"

[lib]
name = "canvasnative"
crate-type = ["cdylib"]

[dependencies]
canvas-core = { path = "../canvas-core", features = ["2d"] }
canvas-2d = { path = "../canvas-2d", features = ["gl"] }
canvas-webgl = { path = "../canvas-webgl" }
canvas-c = { path = "../canvas-c", features = ["2d", "webgl"] }
gl-bindings = { path = "../gl-bindings" }
raw-window-handle = "0.5.2"
parking_lot = "0.12.0"
jni = "0.21.1"
ndk = { version = "0.7.0", features = ["bitmap"] }
libloading = "0.8.3"
log = "0.4.20"
android_logger = "0.13.1"
skia-safe = { version = "0.75.0", features = ["gl", "textlayout"] }
itertools = "0.12.0"