[package]
name = "canvas-android"
version = "0.1.0"
edition = "2021"

[lib]
name = "canvasnative"
crate-type = ["cdylib"]

[dependencies]
canvas-core = { workspace = true, features = ["2d"] }
canvas-2d = { workspace = true, features = ["gl"] }
canvas-webgl.workspace = true
canvas-c = { workspace = true, features = ["2d", "webgl", "gl"] }
gl-bindings.workspace = true
raw-window-handle.workspace = true
parking_lot.workspace = true
jni = "0.21.1"
ndk = { version = "0.7.0", features = ["bitmap"] }
libloading = "0.8.3"
log = "0.4.20"
android_logger = "0.14.1"
skia-safe = { workspace = true, features = ["gl", "textlayout"] }
itertools.workspace = true