[package]
name = "canvas-c"
version = "2.0.0"
edition = "2021"

[features]
default = ["dep:image"]
2d = ["dep:canvas-2d"]
webgl = ["dep:canvas-webgl"]
gl = ["canvas-2d/gl"]
vulkan = ["canvas-2d/vulkan"]
metal = ["canvas-2d/metal"]

[dependencies]
base64 = "0.22.1"
gl-bindings.workspace = true
canvas-core = { workspace = true, features = ["2d"] }
canvas-2d = { workspace = true, optional = true }
canvas-webgl = { workspace = true, optional = true }
parking_lot.workspace = true
ureq.workspace = true
bytes = "1.5.0"
log.workspace = true
wgt = { workspace = true, package = "wgpu-types" }
futures = "0.3"
raw-window-handle.workspace = true
# wgpu-core/hal: base entry with only wgsl; backends added per-platform below
wgpu-core = { workspace = true, features = ["wgsl"] }
wgpu-hal = { workspace = true }
infer = "0.16.0"
image = { version = "0.25.5", optional = true }

[target.'cfg(target_os="ios")'.dependencies]
display-link = { version = "0.2.0" }
wgpu-core = { workspace = true, features = ["wgsl", "metal"] }
wgpu-hal = { workspace = true, features = ["metal"] }
objc2-foundation = { version = "0.2.2", features = ["NSGeometry", "NSData", "NSAutoreleasePool"] }
metal = { version = "0.30.0" }

[target.'cfg(target_os="macos")'.dependencies]
wgpu-core = { workspace = true, features = ["wgsl", "metal"] }
wgpu-hal = { workspace = true, features = ["metal"] }
metal = { version = "0.30.0" }

[target.'cfg(target_os="android")'.dependencies]
ndk = { version = "0.7.0", features = ["bitmap"] }
wgpu-core = { workspace = true, features = ["wgsl", "vulkan"] }
wgpu-hal = { workspace = true, features = ["vulkan"] }