[package]
name = "canvas-c"
version = "2.0.0"
edition = "2021"

[features]
default = ["dep:image"]
2d = ["dep:canvas-2d"]
webgl = ["dep:canvas-webgl"]
gl = ["canvas-2d/gl"]
vulkan = ["canvas-2d/vulkan"]
metal = ["canvas-2d/metal"]

[dependencies]
base64 = "0.22.1"
gl-bindings.workspace = true
canvas-core = { workspace = true, features = ["2d"] }
canvas-2d = { workspace = true, optional = true }
canvas-webgl = { workspace = true, optional = true }
parking_lot.workspace = true
ureq.workspace = true
bytes = "1.5.0"
log.workspace = true
wgt = { workspace = true, package = "wgpu-types" }
futures = "0.3"
raw-window-handle.workspace = true
# wgpu-core/hal: base entry with only wgsl; backends added per-platform below
wgpu-core = { workspace = true, features = ["wgsl"] }
wgpu-hal = { workspace = true }
infer = "0.16.0"
image = { version = "0.25.5", optional = true }

[target.'cfg(target_os="ios")'.dependencies]
display-link = { version = "0.2.0" }
wgpu-core = { workspace = true, features = ["wgsl", "metal"] }
wgpu-hal = { workspace = true, features = ["metal"] }
objc2-foundation = { workspace = true }
objc2-metal = { workspace = true }

[target.'cfg(target_os="macos")'.dependencies]
wgpu-core = { workspace = true, features = ["wgsl", "metal"] }
wgpu-hal = { workspace = true, features = ["metal"] }
objc2-metal = { workspace = true }

# visionOS: display-link 0.2 is gated to ios/macos only, so RAF uses a CADisplayLink
# shim (see src/raf/visionos.rs) built directly on objc2-quartz-core instead.
[target.'cfg(target_os="visionos")'.dependencies]
wgpu-core = { workspace = true, features = ["wgsl", "metal"] }
wgpu-hal = { workspace = true, features = ["metal"] }
objc2 = { workspace = true, features = ["std"] }
objc2-foundation = { workspace = true }
objc2-metal = { workspace = true }
objc2-quartz-core = { workspace = true, features = ["CADisplayLink", "objc2-core-foundation"] }
objc2-core-foundation = { workspace = true }

[target.'cfg(target_os="android")'.dependencies]
ndk = { version = "0.7.0", features = ["bitmap"] }
wgpu-core = { workspace = true, features = ["wgsl", "vulkan"] }
wgpu-hal = { workspace = true, features = ["vulkan"] }