[package]
name = "canvas-core"
version = "2.0.0"
authors = ["Osei Fortune <fortune.osei@yahoo.com>"]
edition = "2021"

[features]
2d = ["skia-safe"]
gl = ["gl-bindings", "egl", "glutin", "skia-safe/gl"]
vulkan = ["ash", "ash-window"]
mtl = ["objc2-metal", "skia-safe/metal"]
metal = ["mtl"]

[dependencies]
gl-bindings = { path = "../gl-bindings", optional = true }
raw-window-handle.workspace = true
parking_lot.workspace = true
stb_image = { git = "https://github.com/triniwiz/rust-stb-image", rev = "869380b" }
log.workspace = true
skia-safe = { workspace = true, optional = true }
ash = { version = "0.38.0", optional = true, features = ["libloading"] }
ash-window = { version = "0.13.0", optional = true }

[target.'cfg(any(target_os = "ios", target_os="macos"))'.dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
foreign-types-shared = "0.3.1"
objc2-metal = { workspace = true, optional = true }
objc2-quartz-core = { workspace = true }
core-foundation = {workspace = true}

[target.'cfg(target_os = "android")'.dependencies]
egl = { version = "0.2.7", optional = true }
android_log = "0.1.3"
glutin = { version = "0.32.0", features = ["egl"], optional = true }
jni = { workspace = true }

