[package]
name = "canvas-ios"
version = "2.0.0"
edition = "2021"

[lib]
name = "canvasnative"
crate-type = ["staticlib"]

[dependencies]
canvas-core = { workspace = true, features = ["2d"] }
canvas-2d = { workspace = true, features = ["gl", "metal"] }
canvas-webgl = { workspace = true }
canvas-c = { workspace = true, features = ["2d", "webgl", "gl", "metal"] }
gl-bindings.workspace = true
raw-window-handle.workspace = true
ureq = "2.9.1"
parking_lot = "0.12.0"
utf16string = "0.2.0"
log = "0.4.21"
env_logger = "0.11.2"
skia-safe = { workspace = true, features = ["gl", "textlayout", "metal"] }
