[package]
name = "canvas-ios"
version = "2.0.0"
edition = "2021"

[lib]
name = "canvasnative"
crate-type = ["staticlib"]

[dependencies]
canvas-core = { workspace = true, features = ["2d", "gl", "metal"] }
canvas-2d = { workspace = true, features = ["gl", "metal"] }
canvas-webgl = { workspace = true }
canvas-c = { workspace = true, features = ["2d", "webgl", "gl", "metal"] }
gl-bindings.workspace = true
raw-window-handle.workspace = true
ureq = "2.9.1"
parking_lot.workspace = true
log.workspace = true
env_logger.workspace = true
skia-safe = { workspace = true, features = ["gl", "metal","textlayout"] }

