[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
canvas-core = { path = "../canvas-core", features = ["2d", "gl"] }
canvas-webgl = { path = "../canvas-webgl" }
canvas-2d = { path = "../canvas-2d", features = ["gl", "metal"] }
gl-bindings = { path = "../gl-bindings" }
raw-window-handle = "0.6.2"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["blocking"] }
chrono = "^0.3"
canvas-c = { path = "../canvas-c", features = ["2d","webgl"] }
canvas-ios = { path = "../canvas-ios" }

[target.'cfg(any(target_os = "macos", target_os = "android"))'.dependencies]
winit = "0.29.4"
glutin-winit = "0.4.2"
glutin = "0.31.1"