[package]
edition = "2021"
name = "canvas-napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi6", "tokio_full"] }
napi-derive = "2.12.2"
canvas-core = { workspace = true, features = ["2d", "gl", "mtl"] }
canvas-c = { workspace = true, features = ["2d", "webgl", "gl", "metal"] }
canvas-2d = { workspace = true, features = ["gl", "metal"] }
canvas-webgl.workspace = true
gl-bindings.workspace = true
[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
